[package]
name = "qompander_rs"
version = "0.1.0"
edition = "2021"
authors = ["Bart Brouns <bart@magnetophon.nl>"]
license = "GPL-3.0-or-later"
homepage = "magnetophon.nl"
description = "expander/compressor/limiter using an analytic signal"

[workspace]
members = ["xtask"]

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
atomic_float = "0.1"
faust-types = { version = "0.1", git = "https://github.com/Frando/rust-faust.git", branch = "main" }
faust-state = { version = "0.1", git = "https://github.com/Frando/rust-faust.git", branch = "main" }

[build-dependencies]
faust-build = { version = "0.1", git = "https://github.com/Frando/rust-faust.git", branch = "main" }


[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
